2009-06-10  Lluis Sanchez Gual  <lluis@novell.com>

	* gtk-gui/gui.stetic:
	* MonoDevelop.RegexToolkit.csproj:
	* MonoDevelop.RegexToolkit/RegexToolkitWindow.cs:
	* MonoDevelop.RegexToolkit/RegexLibraryWindow.cs:
	* gtk-gui/MonoDevelop.RegexToolkit.RegexToolkitWindow.cs:
	* gtk-gui/MonoDevelop.RegexToolkit.RegexLibraryWindow.cs:
	* gtk-gui/MonoDevelop.RegexToolkit.UpdateInProgressDialog.cs:
	  Cosmetic GUI fixes.

	* MonoDevelop.RegexToolkit/UpdateInProgressDialog.cs: Properly
	  handle cancellation of the web service call.

2009-06-02  Lluis Sanchez Gual  <lluis@novell.com>

	* MonoDevelop.RegexToolkit/RegexLibraryWindow.cs: On MS.NET
	  XmlWritter.Settings is not initialized by default. Path by
	  Carlo Kok.

2009-04-17  Mike Kestner  <mkestner@novell.com>

	* MonoDevelop.RegexToolkit.csproj: don't require specific
	gtk-sharp version.

2009-04-15  Lluis Sanchez Gual  <lluis@novell.com>

	* AssemblyInfo.cs:
	* MonoDevelop.RegexToolkit.addin.xml: Bump MD version.

2009-03-02  David Makovský (Yakeen)  <yakeen@sannyas-on.net>

	* MonoDevelop.RegexToolkit/RegexToolkitWindow.cs: make strings
	  translatable

2009-02-25  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.RegexToolkit/RegexLibraryWindow.cs: Changed
	  override Destroy --> override OnDestroyed.

2009-02-25  Mike Krüger  <mkrueger@novell.com>

	* RegexElements.xml: Reverted changes (we came to the
	  conclusion that the old ones were more correct).

2009-02-25  Mike Krüger  <mkrueger@novell.com>

	* RegexElements.xml: Changed some problematic strings found by
	  eno.

2009-02-25  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.RegexToolkit/RegexToolkitWindow.cs:
	* MonoDevelop.RegexToolkit/RegexLibraryWindow.cs: Worked on
	  ressource de-allocation.

2009-02-06  Lluis Sanchez Gual  <lluis@novell.com>

	* MonoDevelop.RegexToolkit.mdp:
	* MonoDevelop.RegexToolkit.csproj: Migrated to MSBuild file
	  format.

2009-02-03  Lluis Sanchez Gual  <lluis@novell.com>

	* AssemblyInfo.cs: